2013-11-12  Vladimir Serbinenko  <phcoder@gmail.com>

	* include/grub/crypto.h: Add maximums on hash size and cipher block
	size.

2013-11-12  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/commands/xnu_uuid.c: Remove variable length arrays.

2013-11-12  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/tests/xnu_uuid_test.c: New test.

2013-11-12  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/commands/hashsum.c: Remove unneeded memset (zalloc already
	covers it).

2013-11-12  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/commands/hashsum.c: Remove variable length arrays.

2013-11-11  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/tests/gfxterm_menu.c (gfxterm_menu): Handle out-of-memory
	condition.
	* tests/grub_func_test.in: Increase memory allocation.

2013-11-11  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/osdep/unix/getroot.c [HAVE_STRUCT_STATFS_F_FSTYPENAME
	&& HAVE_STRUCT_STATFS_F_MNTFROMNAME]: Include sys/param.h and
	sys/mount.h.

2013-11-11  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/osdep/apple/hostdisk.c (grub_util_get_fd_size): Rename to ..
	(grub_util_get_fd_size_os): ...this.
	(grub_hostdisk_flush_initial_buffer): New empty function.

2013-11-11  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/gensyminfo.sh.in: Handle the case of portable output
	without --defined-only.

2013-11-11  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/lib/i386/relocator_common.S [__APPLE__ && __x86_64__]: Use
	rip-relative addressing in prologue.

2013-11-11  Vladimir Serbinenko  <phcoder@gmail.com>

	* include/grub/misc.h [__APPLE__]: Do not add regparm(0) on x86_64.
	* grub-core/kern/misc.c (__bzero) [__APPLE__]: New function.

2013-11-11  Vladimir Serbinenko  <phcoder@gmail.com>

	* util/getroot.c (grub_util_biosdisk_get_grub_dev) [__APPLE__]:
	Add missing semicolon.

2013-11-11  Vladimir Serbinenko  <phcoder@gmail.com>

	* util/grub-macho2img.c: Use plain fopen rather than grub_util_fopen.
